# document-intelligence

./: .env.example  .gitignore  README.md  playground.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: main_doc-intel.yml
doc_intel/: __init__.py  config.py
doc_intel/api/: main.py
doc_intel/extractors/: __init__.py  azure_doc_intel.py  base.py  claude_vision.py  vision_model.py
doc_intel/models/: __init__.py  document_types.py  extraction_result.py
doc_intel/output/: __init__.py  json_writer.py
doc_intel/pipeline/: __init__.py  runner.py
docs/: findings.md
notebooks/: explore_extraction.ipynb
tests/: conftest.py  test_azure_extractor.py  test_json_writer.py
